fixed gaps in diplaying data

--- a/src/app.css
+++ b/src/app.css
@@ -708,6 +708,14 @@ video {
   gap: 0.5rem;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
